css/main.css
/* ... */
@keyframes hit-1 {
  0%, 50%, 100% {
    transform: translate(70px, 3px) rotateZ(45deg);
  }
  75% {
    transform: translate(69px, -2px) rotateZ(42deg);
  }
}
@-webkit-keyframes hit-2 {
  0%, 50%, 100% {
    transform: translate(-70px, 3px) rotateZ(-45deg);
  }
  75% {
    transform: translate(-69px, -2px) rotateZ(-42deg);
  }
}
@keyframes hit-2 {
  0%, 50%, 100% {
    transform: translate(-70px, 3px) rotateZ(-45deg);
  }
  75% {
    transform: translate(-69px, -2px) rotateZ(-42deg);
  }
}
@-webkit-keyframes grow {
  0%, 50%, 100% {
    transform: scale(1);
  }
  75% {
    transform: scale(0.9);
  }
}
@keyframes grow {
  0%, 50%, 100% {
    transform: scale(1);
  }
  75% {
    transform: scale(0.9);
  }
}
@-webkit-keyframes shadow {
  0%, 40% {
    transform: translate(25px, 200px) scale(0.5);
  }
  100% {
    transform: translate(0px, 0px) scale(1);
  }
}
@keyframes shadow {
  0%, 40% {
    transform: translate(25px, 200px) scale(0.5);
  }
  100% {
    transform: translate(0px, 0px) scale(1);
  }
}/*# sourceMappingURL=other.css.map */


body {
  font-family: 'Roboto', sans-serif;
}

section {

}



* {
  font-family: 'Poppins', sans-serif;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  scroll-behavior: smooth;
}


#particles-js {
width: 100%;
height: 100vh;
margin: 0;
background-image: linear-gradient(to top, #2a2929, #292828, #282828, #272727, #262626);
}


.hero{
width:100%;
height:100vh;
background-color: #485461;
padding:05%;
display:flex;flex-direction: column;
text-align: center;
align-items:center;
justify-content:center;
}


header {
  position: fixed;
  width: 100%;
  top: 0;
  left: 0;
  padding: 20px 0% 10px 0%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  transition: 0.6s;
}

header.sticky {
  padding: 5px 100px;
  background-image: linear-gradient(to bottom, #141414, #141414, #131313, #131313, #121212);
}

header.sticky2 {

}

header .logo {
  width: 180px;
  height: 30px;
  margin-left: 20%;
}

header ul {
  display: flex;
  position: relative;
  justify-content: center;
  align-items: center;
  margin-right: 15%;
}

header ul li {  
  display: inline-block;
  list-style: none;
  position: relative;
  margin-left: 30px;
  padding: 20px;
  text-transform: uppercase;
}

header ul li a {
  text-decoration: none;
  color: rgb(255, 255, 255);
  font-size: 15px;
  font-style: normal;
  font-weight: 600;
  transition: 0.6s;
}


header ul li a:hover {
  color: #f3da4b;
}

.underline-animation:after {
  content: '';
  position: absolute;
  width: 100%;
  transform: scaleX(0);
  height: 1px;
  bottom: 0;
  left: 0;
  background-color: #f3da4b;
  transform-origin: bottom right;
  transition: transform 0.25s ease-out;
}

.underline-animation:hover:after {
  transform: scaleX(1);
  transform-origin: bottom left;
}

ul li.active a {
  color: #f3da4b;
}


.profile-avatar {
  position: relative;
  display: inline;
  width: 190px;
  height: 190px;
  border-radius: 50%;
  border: 10px solid rgb(70 70 70);
  overflow: hidden;
  margin: 0 auto;
  box-shadow: 0 0 30px rgb(0 0 0 / 55%);
  text-align: center;
  animation: animate 4s linear infinite;
}


@keyframes animate {
  0%,100% {
    transform: translateY(4px);
  }
  50% {
    transform: translateY(15px);
  }
}



.avatar {
  max-width: 100%;
  max-height: 100%;
}

.back-particles {
  position: absolute;
  background-size: cover;
}

@media (min-aspect-ratio: 16/9) {
  .back-particles{
    width: 120%;
    height: 120%;
  }
}

.type-wrap {
  position: relative;
  display: inherit;
  width: auto;
  height: auto;
  padding: 40px;
}

.type-wrap h1 {
  font-size: 50px;
  font-style: italic;
  font-weight: 600;
  color: #fff;
  text-transform: uppercase;
}

.type-wrap span {
  color: #f3da4b;
}



@media (max-width: 768px){
  .type-wrap h1 {
    font-size: 16px;
  }
}




/*btn nav*/


header .menu-btn i{
  font-size: 22px;
  cursor: pointer;
  display: none;
}

input[type="checkbox"]{
  display: none;
}



@media (min-width: 845px){
  header{
    padding: 20px 0% 10px 4%;
  }
  

  header .logo {
    margin-left: 0;
  }

  header ul {
    margin-right: 0;
  }
}


@media (max-width: 844px) {

  header{
    padding: 35px 6% 10px 4%;
  }


  header .menu-btn i{
    display: block;
  }


  #click:checked ~ .menu-btn i:before{
    content: "\f00d";
  }
  header ul{
    position: absolute;
    top: 0;
    left: -100%;
    background-image: linear-gradient(to bottom, #141414, #141414, #131313, #131313, #121212);
    height: 100vh;
    width: 80%;
    text-align: center;
    display: block;
    transition: all 0.5s ease;
    overflow: visible !important;
  }

  header.sticky {
    padding: 15px 50px;
  }


  #click:checked ~ ul{
    left: 0;
  }

  header .logo {
    margin-left: 0;
    width: 160px;
    height: 28px;
  }

  .fas {
    color: #fede28;
  }
  
  header ul li{
    width: 100%;
    margin: 40px 0;
  }
  header ul li a{
    width: 100%;
    margin-left: -100%;
    display: block;
    font-size: 20px;
    transition: 0.1s cubic-bezier(0.68, -0.55, 0.265, 1.55);
  }
  #click:checked ~ ul li a{
    margin-left: 0px;
  }

  * {
    scroll-behavior: smooth;
  }

}

.home-hero{
  background-position: center;
  background-size: cover;
}






.container-about {
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  padding: 5px 10% 10px 10%;
  background-image: linear-gradient(to bottom, #2a2929, #292828, #282828, #272727, #262626);
  color: #fff;
}

.container-portfolio {
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #ffffff;
  text-align: center;
  padding: 5px 10% 10px 10%;
}





.footer {
  padding: 40px;
  background-image: linear-gradient(to bottom, #141414, #141414, #131313, #131313, #121212);
}

.footer .social {
  text-align: center;
  padding-bottom: 25px;
  color: #fff;
}
/* ... */

